--- a/css/styles.css
+++ b/css/styles.css
@@ -669,9 +669,9 @@ ul {
 /* --------------------------
  Footer FORM
 ----------------------------- */
-/* .form-field {
 
-} */
+
+
 .form-label {
     display:flex;
     
@@ -723,6 +723,7 @@ ul {
     padding-top: 10px;
     padding-bottom: 10px;
 
+    border-color: transparent;
     background-color: var(--main-color-3);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
@@ -815,9 +816,7 @@ ul {
     color:var(--main-color-3) ;
 }
 
-.modal-form-list {
-    
-}
+
 .modal-title {
 
     margin-bottom: 12px;
@@ -832,8 +831,27 @@ ul {
     color: var(--main-color-1);
 
 }
-.title-field {
+
+
+.modal-field {
+    display: flex;
+    flex-direction: column;
+  
+}
+
+.label-modal
+ {
+    position: relative;
+    margin-bottom: 10px;
+
+}
+.name-field
+ {
+    position: relative;
     display: block;
+    
+    width: 22px;
+    height: 14px;
     margin-bottom: 4px;
 
     font-style: normal;
@@ -842,10 +860,183 @@ ul {
     line-height: calc(14/12);
     letter-spacing: 0.01em;
     color: var(--main-color-2);
+   
+    transition-property:color;
+    transition-duration: 2500ms;
+    transition-timing-function:
+    cubic-bezier(0.4, 0, 0.2, 1);
+    
+    
+    /* outline: 2px solid blueviolet; */
+}
+.label-modal:focus-within >  .name-field, 
+.label-modal:focus-within > .icon-field
+  {
+    color: var(--accent-color); 
+}
+
+.input-modal {
+    display: block;
+    width: 448px;
+    height: 40px;
+    padding-left: 42px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    
+}
+.input-modal:focus {
+    border-color: var(--accent-color);
+}
+
+.icon-field {
+    position: absolute;
+    left: 12px;
+    bottom: 11px;
+    /* outline: 2px solid blueviolet; */
+
+    /* transform: translateY(-50%); */
+    fill:currentColor
+
+   
+    
+}
+.input-modal:focus-visible {
+   outline: none;
+
+}
+/*  */
+.textarea-margin {
+    margin-bottom: 20px;
+}
+
+.textaria-modal {
+    resize: none;
+    width: 448px;
+    height: 120px; 
+    padding: 12px 16px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px; 
+   
+}
+.textaria-modal:focus-visible {
+    outline: none;
+}
+.textaria-modal:focus {
+    border-color: var(--accent-color);
 }
 
 /* ----------------
-       PORTFOLIO
+checked form modal */
+
+.check {
+    position: relative;
+   
+    width: 425px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left:23px ;
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: calc(24/14);
+    letter-spacing: 0.03em;
+    
+    color: var(--main-color-2);
+    border-color: transparent;
+    /* outline: 1px solid tomato; */
+}
+.check-form {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+
+}
+
+.check-input {
+
+    /* margin-right: 7px; */
+    /* left: 12px; */
+    appearance: none;
+    
+}
+
+.check-form .uncheck {
+    opacity: 1;
+
+    transition-property: opacity;
+    transition-duration: 250ms;
+    transition-timing-function:
+    cubic-bezier(0.4, 0, 0.2, 1);
+
+
+}
+.check-input:checked + .check-form .uncheck {
+    opacity: 0;
+}
+
+
+.check-form .checked-on {
+    opacity: 0;
+
+    transition-property:opacity;
+    transition-duration: 250ms;
+    transition-timing-function:
+    cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.check-input:checked + .check-form .checked-on {
+    opacity: 1;
+}
+
+
+
+
+.conditoin-contacts {
+    /* font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: calc(24/14);
+    letter-spacing: 0.03em;
+     */
+    color:var(--accent-color);
+}
+
+.btn-send-form {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    width:200px;
+    height: 50px;
+    padding:10px 52px ;
+
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(30/16);
+    letter-spacing: 0.06em;
+
+    color:var(--main-color-4);
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border-color: transparent;
+}
+.btn-send-form:hover,
+.btn-send-form:focus {
+    background:var(--focus-btn-hero) ;
+}
+/* ----------------
+PORTFOLIO
     ---------------- */
 .back-portfolio {
     background-color: var(--main-color-4);
